DashboardReport schema tweaks
